# solaris-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Aptfile  Dockerfile  Makefile  Procfile  README.md  README.rst  ci.yml  docker-compose.ci.yml  docker-compose.local.yml  local.yml  main.py  manage.py  pyproject.toml  pytest.ini
.circleci/: config.yml
.devcontainer/: bashrc.override.sh  devcontainer.json
.envs/.local/: .django
.github/workflows/: ci.yml
apps/trips/: admin.py  consumers.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
config/: asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  index.rst  make.bat
docs/contents/: changelog.rst  commit.rst  deploy.rst  document.rst  install.rst  lint.rst  settings.rst  test.rst  usage.rst
experimental/codemaker/: README.md  pyproject.toml
experimental/codemaker/projects/to-do/: prompt
experimental/codemaker/projects/to-do/memory/logs/: clarify  gen_clarified_code  gen_entrypoint
experimental/codemaker/projects/to-do/workspace/: README.md  all_output.txt  database.py  main.py  task.py  task_service.py
omibus/planet/: admin.py  apps.py  models.py
omibus/trips/: admin.py  apps.py  consumers.py  middleware.py  models.py  serializers.py  urls.py  views.py
omibus/users/: apps.py  auth_backend.py  exceptions.py  models.py  serializers.py  tasks.py  twilio_client.py  urls.py  utils.py  views.py
requirements/: base.txt  local.txt  production.txt
server/: .dockerignore  .gitignore
server/config/: asgi.py
solaris_python/: AAPL.joblib  GOOG.joblib  MSFT.joblib  ^GSPC.joblib  model.py
(+24 files in other folders)
