[tool.poetry]
name = "solaris-python"
version = "0.1.0"
description = "Monorepo for Solaris Python microservices" 
authors = ["Felipe Restrepo <maferelo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.2"
uvicorn = "0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
