[tool.poetry]
name = "solaris-python"
version = "0.1.0"
description = "Monorepo for Solaris Python microservices" 
authors = ["Felipe Restrepo <maferelo@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.95.2"
uvicorn = "0.22.0"
pystan = "3.7.0"
prophet = "1.1.3"
joblib = "1.2.0"
pandas = "2.0.1"
plotly = "5.14.1"
yfinance = "0.2.18"
gunicorn = "20.1.0"
cookiecutter = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
